Add an icon to the preload retry button.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -20,8 +20,8 @@ button {
     padding: 0 8px!important;
 }
 
-i.material-icons {
-    vertical-align: text-bottom;
+button .material-icons {
+    vertical-align: middle;
 }
 
 md-sidenav-container {
