Fix a small optical regression.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -194,7 +194,7 @@ snack-bar-container {
         float: right;
     }
 
-    .mobile-only, h1 > small > br {
+    .mobile-only, h1 br {
         display: none;
     }
 }
