--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -15,13 +15,15 @@ body {
     background-color: white;
 }
 
-button {
+button, .button {
     margin: 6px 8px!important;
     padding: 0 8px!important;
 }
 
-button .material-icons {
-    vertical-align: middle;
+button, .button {
+    .material-icons {
+        vertical-align: middle;
+    }
 }
 
 md-sidenav-container {
@@ -45,7 +47,7 @@ md-grid-tile:hover {
 
 md-toolbar {
     @include shade($primary-palette, $primary-medium-shade);
-    button { color: white!important; }
+    button, .button { color: white!important; }
 }
 
 nav, .app-toolbar-title, .app-content > div, h1 > small > span {
@@ -106,8 +108,10 @@ snack-bar-container {
     margin: 24px;
 }
 
-.right, md-dialog-actions button {
-    float: right;
+.right, md-dialog-actions {
+    button, .button {
+        float: right;
+    }
 }
 
 .text-accent {
