--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -26,6 +26,21 @@ button, .button {
     }
 }
 
+md-dialog-actions, .app-snackbar-actions {
+    padding: 12px 0;
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+}
+
+md-dialog-container {
+    margin: auto;
+}
+
+md-dialog-content {
+    flex-grow: 1;
+}
+
 md-sidenav-container {
     height: 100vh;
 }
@@ -52,6 +67,13 @@ md-toolbar {
 
 nav, .app-toolbar-title, .app-content > div, h1 > small > span {
     @extend .pad;
+}
+
+post-dialog {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 snack-bar-container {
@@ -88,12 +110,12 @@ snack-bar-container {
   text-decoration: none;
 }
 
-.app-snackbar-actions {
-    text-align: right;
-}
-
 .app-toolbar-filler {
     flex: 1 1 auto;
+}
+
+.cdk-overlay-pane {
+    padding: 16px;
 }
 
 .hidden {
@@ -106,12 +128,6 @@ snack-bar-container {
 
 .pad {
     margin: 24px;
-}
-
-.right, md-dialog-actions {
-    button, .button {
-        float: right;
-    }
 }
 
 .text-accent {
