--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -71,6 +71,42 @@ snack-bar-container {
     color: white;
 }
 
+.flex-2-cols {
+    width: 100% * 2 / 12;
+}
+
+.flex-3-cols {
+    width: 100% * 3 / 12;
+}
+
+.flex-4-cols {
+    width: 100% * 4 / 12;
+}
+
+.flex-5-cols {
+    width: 100% * 5 / 12;
+}
+
+.flex-6-cols {
+    width: 100% * 6 / 12;
+}
+
+.flex-7-cols {
+    width: 100% * 7 / 12;
+}
+
+.flex-8-cols {
+    width: 100% * 8 / 12;
+}
+
+.flex-9-cols {
+    width: 100% * 9 / 12;
+}
+
+.flex-10-cols {
+    width: 100% * 10 / 12;
+}
+
 .app-action {
     @extend .pad;
     display: inline-block;
@@ -105,6 +141,10 @@ snack-bar-container {
     flex: 1 1 auto;
 }
 
+.flex {
+    display: flex;
+}
+
 .hidden {
     display: none;
 }
@@ -127,6 +167,10 @@ snack-bar-container {
 
 .text-warn {
     color: $warn-bg;
+}
+
+.wrap {
+    flex-wrap: wrap;
 }
 
 #aside {
