Make use of the PostsComponent.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -63,7 +63,7 @@ md-toolbar {
     button, .button { color: white!important; }
 }
 
-nav, .app-toolbar-title, .app-content > div, h1 > small > span {
+nav, .app-toolbar-title, .app-content > div, h1 > small > span, md-card {
     @extend .pad;
 }
 
