--- a/src/stylesheets/_displacer.component.scss
+++ b/src/stylesheets/_displacer.component.scss
@@ -5,3 +5,46 @@
  * This contains style directives locally applied to the DisplacerComponent.
  */
 
+.displacer-source {
+    @extend .maximized;
+
+    position: absolute;
+}
+
+.app-content {
+    height: 100vh;
+}
+
+.displacer-content {
+    @extend .maximized;
+
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.displacer-content .positioning-anchor * {
+    pointer-events: all;
+}
+
+.maximized {
+    width: 100%;
+    height: 100%;
+}
+
+.positioning-anchor {
+    @extend .maximized;
+
+    // Force this element to be the ancestor for absolute positioning.
+    transform: translate(0,0);
+}
+
+/*
+ * All desktops.
+ */
+@media (min-width: 1264px) {
+    .displacer-content {
+        // Don't obscure the scrollbar.
+        padding-right: 16px;
+    }
+}
+
