--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -80,7 +80,7 @@ snack-bar-container {
 .app-action {
     @extend .pad;
     display: inline-block;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     right: 0;
 }
@@ -165,6 +165,10 @@ snack-bar-container {
     opacity: 0;
 }
 
+.mat-sidenav-content {
+    overflow: hidden;
+}
+
 .pad {
     margin: 24px;
 }
@@ -187,6 +191,14 @@ snack-bar-container {
 
 #aside {
     width: 600px;
+}
+
+#displacer-target {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 2;
 }
 
 #nav {
