Fix the FAB again, because screw it...

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -117,6 +117,10 @@ snack-bar-container {
     clear: both;
 }
 
+.displacer-content .positioning-anchor * {
+    pointer-events: all;
+}
+
 .flex {
     display: flex;
 }
