--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -117,6 +117,10 @@ snack-bar-container {
     clear: both;
 }
 
+.dark md-sidenav .mat-card {
+    background: #535353;
+}
+
 .displacer-content .positioning-anchor * {
     pointer-events: all;
 }
