--- a/src/stylesheets/_main.component.scss
+++ b/src/stylesheets/_main.component.scss
@@ -1,7 +1,7 @@
 
 /*
- * Styling partial for the AppComponent.
+ * Styling partial for the MainComponent.
  *
- * This contains style directives locally applied to the AppComponent.
+ * This contains style directives locally applied to the MainComponent.
  */
 
