--- a/src/stylesheets/_layout.component.scss
+++ b/src/stylesheets/_layout.component.scss
@@ -1,7 +1,7 @@
 
 /*
- * Styling partial for the AppComponent.
+ * Styling partial for the LayoutComponent.
  *
- * This contains style directives locally applied to the AppComponent.
+ * This contains style directives locally applied to the LayoutComponent.
  */
 
