--- a/src/stylesheets/main.component.scss
+++ b/src/stylesheets/main.component.scss
@@ -1,15 +1,15 @@
 
 /*
- * Styling for the AppComponent.
+ * Styling for the MainComponent.
  *
- * This is a style locally applied to AppComponent.  All styles specific to the 
- * AppComponent are loaded here.
+ * This is a style locally applied to MainComponent.  All styles specific to the 
+ * MainComponent are loaded here.
  *
  * This stylesheet contains at-rules only. The actual rules should go into the 
- * _app.component partial, to keep things easier to restructure.
+ * _main.component partial, to keep things easier to restructure.
  */
 
 @import 'mixins';
 @import 'colors';
-@import '_app.component';
+@import '_main.component';
 
