--- a/src/stylesheets/not-found.component.scss
+++ b/src/stylesheets/not-found.component.scss
@@ -1,15 +1,15 @@
 
 /*
- * Styling for the AppComponent.
+ * Styling for the NotFoundComponent.
  *
- * This is a style locally applied to AppComponent.  All styles specific to the 
- * AppComponent are loaded here.
+ * This is a style locally applied to NotFoundComponent.  All styles specific to 
+ * the NotFoundComponent are loaded here.
  *
  * This stylesheet contains at-rules only. The actual rules should go into the 
- * _app.component partial, to keep things easier to restructure.
+ * _not-found.component partial, to keep things easier to restructure.
  */
 
 @import 'mixins';
 @import 'colors';
-@import '_app.component';
+@import '_not-found.component';
 
