Add links in the PostComponent.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -15,6 +15,10 @@ blockquote {
     border-left: 4px solid $primary-bg;
 }
 
+blockquote.accent {
+    border-left-color: $accent-bg;
+}
+
 body {
     margin: 0;
     color: black;
