Capitalize buttton labels.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -110,6 +110,10 @@ md-card-content {
     pointer-events: all;
 }
 
+[md-button] {
+    text-transform: uppercase;
+}
+
 snack-bar-container {
     color: white;
 }
