Rework the navigation concept.

--- a/src/stylesheets/_styles.scss
+++ b/src/stylesheets/_styles.scss
@@ -324,6 +324,10 @@ snack-bar-container {
     #aside {
         width: 100%;
     }
+
+    #aside .close-btn {
+        display: none;
+    }
 }
 
 /*
