--- a/src/stylesheets/_spinner.scss
+++ b/src/stylesheets/_spinner.scss
@@ -41,7 +41,7 @@
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
-    color: $accent-bg;
+    color: $primary-bg;
 }
 
 .spinner::after {
