--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -8,6 +8,7 @@
 @import 'colors';
 @import 'typo';
 @import '../../node_modules/@angular/material/theming';
+@import '../../node_modules/@covalent/core/theming/all-theme';
 @import '_theme';
 
 @include mat-core();
