--- a/src/app/_styles.scss
+++ b/src/app/_styles.scss
@@ -28,6 +28,10 @@ blockquote.accent {
     border-left-color: $accent-bg;
 }
 
+blockquote > p:last-child {
+    margin-bottom: 0;
+}
+
 body {
     margin: 0;
     color: black;
