Force the last line of <md-card-content> paragraphs to be 10en shorter.

--- a/src/app/_comment.component.html
+++ b/src/app/_comment.component.html
@@ -32,8 +32,8 @@
                 <md-icon>attachment</md-icon>
             </a>
             <br>
-            {{comment.message}}
-        </p>
+            {{comment.message}}<!--
+        --></p>
     </blockquote>
     <md-spinner *ngIf='!_loaded' color='accent'></md-spinner>
 </md-card-content>
