--- a/src/app/_missing-feature.component.html
+++ b/src/app/_missing-feature.component.html
@@ -8,8 +8,8 @@
     <md-card-content>
         <p>
             Dieses Feature haben wir leider noch nicht fertig bekommen, 
-            aber wir arbeiten daran, bitte habe noch etwas Geduld.
-        </p>
+            aber wir arbeiten daran, bitte habe noch etwas Geduld.<!--
+        --></p>
     </md-card-content>
 </md-card>
 
