--- a/src/app/_not-found.component.html
+++ b/src/app/_not-found.component.html
@@ -12,8 +12,8 @@
             Bitte überprüfe den Link, mit dem du auf diese Seite 
             gekommen bist.  Wenn du diese Seite über einen Knopf in 
             der App erreicht hast, wende dich bitte an unser 
-            Supportteam, damit wir das Problem beheben können.
-        </p>
+            Supportteam, damit wir das Problem beheben können.<!--
+        --></p>
     </md-card-content>
     <md-card-actions>
         <a md-button (click)='location.back()'>
