--- a/src/app/_app.component.html
+++ b/src/app/_app.component.html
@@ -2,12 +2,12 @@
 <layout>
     <nav app-content></nav>
     <aside app-content>
-        <post *appRouting='POST'></post>
+        <post *appRouting='appService.POST'></post>
         <no-detail *appRouting></no-detail>
     </aside>
     <main app-content>
-        <dashboard *appRouting='null; conflicts:PAGE'></dashboard>
-        <page *appRouting='PAGE'></page>
+        <dashboard *appRouting='null; conflicts:appService.PAGE'></dashboard>
+        <page *appRouting='appService.PAGE'></page>
         <not-found *appRouting></not-found>
     </main>
 </layout>
