--- a/src/app/_layout.component.html
+++ b/src/app/_layout.component.html
@@ -88,7 +88,7 @@
                     mdTooltip="Dashboard"
                     mdTooltipShowDelay='1500'
                     mdTooltipHideDelay='1500'
-                    [appLink]='{page: null}'>
+                    [appLink]='{profile: null}'>
                 <md-icon>dashboard</md-icon>
             </button>
             <a
