--- a/src/app/_pages.component.html
+++ b/src/app/_pages.component.html
@@ -4,7 +4,7 @@
     <a
             md-list-item
             *ngFor='let page of pages'
-            [appLink]='{page: page.id}'>
+            [appLink]='{profile: page.id}'>
         {{page.name}}
     </a>
 </md-nav-list>
