Replace ProfileComponent with ProfileCardComponent.

--- a/src/app/_comments.component.html
+++ b/src/app/_comments.component.html
@@ -1,6 +1,4 @@
 <!-- HTML template for the CommentsComponent -->
-<md-card *ngFor='let comment of _comments'>
-    <comment [comment]='comment'></comment>
-</md-card>
+<comment *ngFor='let comment of _comments' [comment]='comment'></comment>
 <md-spinner color='accent' *ngIf='!_loaded'></md-spinner>
 
