--- a/src/app/_comment.component.html
+++ b/src/app/_comment.component.html
@@ -35,7 +35,9 @@
                 {{comment.message}}<!--
             --></p>
         </blockquote>
-        <md-spinner *ngIf='!_loaded' color='accent'></md-spinner>
+    </md-card-content>
+    <md-card-content *ngIf='!_loaded'>
+        <md-spinner color='accent'></md-spinner>
     </md-card-content>
     <md-card-footer>
         <div>
