--- a/src/app/_app.component.html
+++ b/src/app/_app.component.html
@@ -6,8 +6,8 @@
         <no-detail *appRouting></no-detail>
     </aside>
     <main app-content>
-        <dashboard *appRouting='null; conflicts:appService.PAGE'></dashboard>
-        <page *appRouting='appService.PAGE'></page>
+        <dashboard *appRouting='null; conflicts:appService.PROFILE'></dashboard>
+        <profile *appRouting='appService.PROFILE'></profile>
         <not-found *appRouting></not-found>
     </main>
 </layout>
