--- a/src/app/_page.component.html
+++ b/src/app/_page.component.html
@@ -1,61 +1,6 @@
 <!-- HTML template for the PageComponent -->
-<md-spinner color='accent' *ngIf='!_loaded'></md-spinner>
+<md-spinner color='accent' *ngIf='!page'></md-spinner>
 <div *ngIf='page'>
-    <div>
-        <h1>
-            {{page.name}}
-            <br>
-            <small>
-                <span
-                        mdTooltip="Likes (neue Likes)"
-                        mdTooltipShowDelay='1500'
-                        mdTooltipHideDelay='1500'>
-                    <span class='text-primary'>
-                        <md-icon>thumb_up</md-icon>
-                    </span>
-                    <span class='text-accent'>
-                        {{page.fan_count}}
-                    </span>
-                    <span
-                            class='text-primary'>
-                        (+{{page.new_like_count || 0}})
-                    </span>
-                </span>
-                <span>
-                    <br>
-                    <span
-                            mdTooltip="Nutzer, die über die Seite reden"
-                            mdTooltipShowDelay='1500'
-                            mdTooltipHideDelay='1500'>
-                        <span class='text-primary'>
-                            <md-icon>forum</md-icon>
-                        </span>
-                        <span class='text-accent'>
-                            {{page.talking_about_count || 0}}
-                        </span>
-                    </span>
-                </span>
-                <span *ngIf='page.overall_star_rating'>
-                    <br>
-                    <span
-                            mdTooltip="Bewertung (Anzahl Bewertungen)"
-                            mdTooltipShowDelay='1500'
-                            mdTooltipHideDelay='1500'>
-                        <span class='text-primary'>
-                            <md-icon>star</md-icon>
-                        </span>
-                        <span class='text-accent'>
-                            {{page.overall_star_rating}}
-                        </span>
-                        <span class='text-primary'>
-                            (<md-icon>people</md-icon><!--
-                                -->{{page.rating_count}})
-                        </span>
-                    </span>
-                </span>
-            </small>
-        </h1>
-    </div>
     <displacer>
         <span class='app-action'>
             <button md-fab (click)='openPostDialog()'>
